# apps/backend/crates/entity/src/_generated/build_logs.rs
@@ -1,0 +1,27 @@
+//! `SeaORM` Entity, @generated by sea-orm-codegen 2.0
+
+use sea_orm::entity::prelude::*;
+
+#[sea_orm::model]
+#[derive(Clone, Debug, PartialEq, DeriveEntityModel)]
+#[sea_orm(table_name = "build_logs")]
+pub struct Model {
+    #[sea_orm(primary_key)]
+    pub id: i64,
+    pub build_id: Uuid,
+    #[sea_orm(column_type = "Text")]
+    pub level: String,
+    #[sea_orm(column_type = "Text")]
+    pub message: String,
+    pub created_at: DateTimeWithTimeZone,
+    #[sea_orm(
+        belongs_to,
+        from = "build_id",
+        to = "id",
+        on_update = "NoAction",
+        on_delete = "Cascade"
+    )]
+    pub builds: HasOne<super::builds::Entity>,
+}
+
+impl ActiveModelBehavior for ActiveModel {}
